Se creo el metodo resultadoActual en la clase Muestra